<resources>
    <string name="app_name">AU</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_filter_uuid">LBS UUID를 광고하는 장치 만</string>
    <string name="menu_filter_nearby">주변 기기 만</string>
    <string name="unknown_device">알수없는 기기</string>
    <string name="turn_on">켜짐</string>
    <string name="turn_off">꺼짐</string>
    <string name="title_led_state">LED</string>
    <string name="title_button_state">Button</string>
    <string name="state">State</string>
    <string name="button_pressed">Pressed</string>
    <string name="button_released">Released</string>
    <string name="button_unknown">알수없음</string>
    <string name="led_summary">스위치를 토글하여 LED 3을 켜거나 끕니다.</string>
    <string name="button_summary">개발 키트에서 버튼 1을 누릅니다.</string>
    <string name="location_permission_title">위치 권한이 필요합니다</string>
    <string name="location_permission_info">Android 6.0 Marshmallow부터 Bluetooth 저에너지 장치를 검색하려면 애플리케이션에 위치 권한이 필요합니다.
      \n\n사용자의 위치를 ​​확인하기 위해 iBeacon이나 Eddystone과 같은 Bluetooth LE 비콘을 사용할 수 있기 때문입니다. <b>앱이름</b>은 정보를 어떤 식으로도 사용하지 않습니다.</string>
    <string name="location_permission_action">권한부여</string>
    <string name="location_permission_settings">설정</string>
    <string name="bluetooth_disabled_title">BLUETOOTH 비활성</string>
    <string name="bluetooth_disabled_info">Bluetooth 어댑터가 꺼져 있습니다. 활성화하려면 아래 버튼을 클릭하십시오.</string>
    <string name="bluetooth_disabled_action">Bluetooth 활성화</string>
    <string name="blinky_guide_title">디바이스를 확인할 수 없습니까?</string>
    <string name="blinky_guide_info">1. DK가 <b>켜져</b> 있고 마이크로 USB 케이블을 사용하여 전원에 연결되어 있거나 코인 셀이 연결되어 있는지 확인하십시오.
        \n\n2. 펌웨어 및 SoftDevice가 깜박이는지 확인하십시오.</string>
    <string name="blinky_guide_location_info">3. 위치가 꺼져 있습니다. 일부 Android 전화는 Bluetooth LE 장치를 검색하기 위해 활성화해야합니다.
Blinky가 광고 중이고 여기에 표시되지 않는 경우 아래 버튼을 클릭하여 위치를 사용하도록 설정하십시오.</string>
    <string name="blinky_guide_location_action">사용중</string>
    <string name="not_supported_title">지원하지 않는 기기</string>
    <string name="not_supported_info">1. 장치의 속성 테이블에서 깜박임 서비스를 찾을 수 없습니다.
		\n\n2. DK가 올바른 펌웨어로 깜박이는지 확인하십시오.
		\n\n3. 이전에 다른 펌웨어와 함께 DK를 사용한 경우 이전 서비스가 시스템에 의해 캐시되었을 수 있습니다.</string>
    <string name="not_supported_action">수정 후 다시시도해주세요.</string>
    <string name="state_connecting">연결중…</string>
    <string name="state_initializing">초기화중…</string>
    <string name="permission_text">접근권한 이용 안내</string>
    <string name="permission_content_text">AU 이용을 위해 아래 기능을 사용합니다.</string>
    <string name="cancel">거절</string>
    <string name="permit">동의</string>
    <string name="not_permission">모든 권한의 승인이 필요합니다.</string>
    <string name="permit_bluetooth">블루투스 연동</string>
    <string name="permit_bluetooth_explain">앱은 다음중 하나 이상의 작업을 할 수 있습니다.\n\nㆍ민감한 로그 데이터 읽기\nㆍ시스템 내부 상태 검색\nㆍ웹 북마크 및 기록 읽기\nㆍ실행 중인 앱 검색</string>
    <string name="permit_access">기기 및 앱기록</string>
    <string name="permit_access_explain">앱이 주변 블루투스 기기로 송신하거나 이에 대한 정보를 수집하는 등의 방식으로 블루투스를 제어할 수 있습니다.</string>
    <string name="connect_explain">제품 사용 관련 문의사항 발생시 055-290-5888을 통해 신속한 상담을 받으실 수 있습니다.</string>
    <string name="connect">연결</string>
    <string name="main_title">AU</string>
    <string name="brush">Brush</string>
    <string name="cooler">Cooler</string>
    <string name="puff">Puff</string>
    <string name="silicone">Silicone</string>
    <string name="bottom_info">Info</string>
    <string name="bottom_manual">Manual</string>
    <string name="bottom_pattern">Pattern</string>
    <string name="serial_title">Serial Number</string>
    <string name="tap_step">사용스텝˙</string>
    <string name="tap_head">헤드관리</string>
    <string name="count_use">회 사용</string>
    <string name="device_info">기기정보</string>
    <string name="battery">Battery</string>
    <string name="info_time">사용시간</string>
    <string name="manual_start">시작하기</string>
    <string name="manual_usage">사용방법</string>
    <string name="manual_head">헤드관리</string>
    <string name="monthly_pattern">월간패턴</string>
    <string name="monthly_pattern_title">월간 사용 패턴</string>
    <string name="usage_time">헤드관리</string>
    <string name="usage_time_title">헤드 사용시간 패턴</string>
    <string name="usage_time_total">총 사용시간</string>
    <string name="menu1">품질보증 및 약관</string>
    <string name="menu2">주의사항 및 FAQ</string>
    <string name="menu3">AS 서비스</string>
    <string name="menu4">매뉴얼 다운로드</string>
    <string name="hundred">100</string>
    <string name="eighty">80</string>
    <string name="sixty">60</string>
    <string name="forty">40</string>
    <string name="twenty">20</string>
    <string name="zero">0</string>
    <string name="time">사용시간</string>
    <string name="avg">사용비율</string>
    <string name="change_txt">헤드 교체시기</string>
    <string name="last_week">지난달</string>
    <string name="this_week">이번달</string>
    <string name="manual_start_1">용도에 맞는 헤드를 장착 해주세요.</string>
    <string name="manual_start_2">옆면에 위치한 전원버튼을 길게 눌러 작동시킵니다.</string>
    <string name="manual_start_3">본 제품은 무선 충전 제품으로, 구성품에 포함된 USB 케이블로 연결된 크래들에 올려 충전하며 크래들의 중심과 본체의 중심이 일치하도록 올려 충전합니다.</string>
    <string name="manual_start_4">배터리 20%이하일 경우 전원버튼LED가 깜박깜박 점멸되며 완충시 전원버튼 LED가 지속 점등됩니다.</string>
    <string name="manual_start_end">※ 배터리 방전후 충전완료까지 3시간 이상 소요되며, 제품 놓는 위치에따라 충전 시간이 늘어날 수 있습니다.</string>
    <string name="num1">① </string>
    <string name="num2">② </string>
    <string name="num3">③ </string>
    <string name="num4">④ </string>
    <string name="num5">⑤ </string>
    <string name="how_to_use1"><b>1. 클렌징 모드 (브러시헤드, 실리콘헤드)</b></string>
    <string name="how_to_use1_1">얼굴에 적당한 물기가 있는 상태에서 클렌징 제품으로 거품을 냅니다.</string>
    <string name="how_to_use1_2">피부 컨디션에 맞게 브러시/실리콘 헤드를 본체에 장착합니다.\n - 브러시 헤드는 딥클렌징에 효과적입니다. (블랙헤드, 각질제거)\n - 실리콘 헤드는 데일리 클렌징을 해 줄 경우, 민감한 피부에 효과적입니다. (저자극)</string>
    <string name="how_to_use1_3">전원 버튼을 길게 눌러 전원을 켜고, 앞면의 LED를 통해 원하는 진동모드 단계를 확인합니다.</string>
    <string name="how_to_use1_4">거품이 충분히 생길 수 있도록 얼굴 구석구석을 클렌징합니다</string>
    <string name="how_to_use1_5">관리가 끝나면 전원 버튼을 길게 눌러 전원을 끕니다.</string>
    <string name="how_to_use2">\n\n<b>2. 마사지 모드 (쿨러헤드)</b></string>
    <string name="how_to_use2_1">얼굴에 미온수나 화장수를 충분히 발라주세요.</string>
    <string name="how_to_use2_2">클렌징 후 쿨러헤드를 본체에 장착합니다.\n * 쿨러헤드는 냉장 보관 후 차갑게 사용하면 피부진정에 효과적입니다.</string>
    <string name="how_to_use2_3">전원 버튼을 길게 눌러 전원을 켜고, 앞면의 LED를 통해 원하는 진동 모드 단계를 확인합니다.</string>
    <string name="how_to_use2_4">쿨러를 얼굴에 두고 부기가 빠질 때까지 천천히 밀면서 마사지합니다.</string>
    <string name="how_to_use2_5">마사지가 끝나면 전원 버튼을 길게 눌러 전원을 끕니다.</string>
    <string name="how_to_use3">\n\n<b>3. 메이크업 모드 (퍼프헤드)</b></string>
    <string name="how_to_use3_1">세안을 한 뒤 메이크업 제품을 얼굴에 도포합니다.</string>
    <string name="how_to_use3_2">퍼프 헤드를 본체에 장착해줍니다.</string>
    <string name="how_to_use3_3">전원 버튼을 길게 눌러 전원을 켜고, 앞면의 LED를 통해 원하는 진동 모드 단계를 확인합니다.</string>
    <string name="how_to_use3_4">진동을 통해 메이크업 제품이 얼굴에 골고루 도포 될 수 있도록 얼굴 전체에 걸쳐 사용해 줍니다.</string>
    <string name="how_to_use3_5">관리가 끝나면 전원 버튼을 길게 눌러 전원을 끕니다.</string>
    <string name="how_to_use4">\n\n<b>※ 타이머 기능</b>
        \n사용 기본 시간 10분
        \n(10분이 경과할 경우 자동으로 전원이 종료됩니다.)
        \n모든 모드에서 원하는 진동모드 3단계 조절 가능합니다.</string>
    <string name="manual_head_1">본체의 고정축과 각 헤드의 고정홈을 맞춰 고정축의 끝까지 수직으로 가볍게 밀어 장착합니다.\n장착 시 헤드별 인식기능으로 부저음과 함께 사용할 헤드가 인식됩니다.</string>
    <string name="manual_head_2_1"> 사용이 끝난 즉시 무선충전 살균크래들의 커버를 분리한 다음, UV LED 향하도록 사용한 헤드를 넣어 줍니다\n(브러시 헤드는 전용위치에 넣어줍니다.)</string>
    <string name="manual_head_2_2"> 살균 커버와 살균 케이스를 결합 시 UV LED가 켜지면서 10분간 자동 살균 모드가 시작되며, 상단 인디케이터를 통해 살균동작을 확인할수 있습니다.</string>
    <string name="manual_head_2_3"> 살균 모드가 끝나면 자동 OFF 되며, 살균 케이스가 오픈 된 상태에서는 제품이 작동하지 않습니다.</string>
    <string name="manual_head_2_4"> 장시간 미사용 헤드의 경우 세균 증식을 막기 위해 자체적으로 크래들의 자동 살균 기능이 작동됩니다.\n(10분 살균모드 종료 후, 1시간 간격 자동살균)</string>
    <string name="manual_head_2_5"> 부피가 작은 화장붓, 귀금속, 악세서리, 네일용품, 손톱깎이, 쪽가위, 귀이개 등 소형물품들의 살균도 가능합니다.</string>
    <string name="manual_precautions_title">※ 주의사항</string>
    <string name="manual_precautions_txt">제품 내부의 자외선 살균 LED는 눈에 안좋은 영향을 줄수 있음으로 직접보는 것을 삼가해 주세요.</string>
    <string name="terms">보증기간 내에 사용설명서 등 주의사항에 따라 정상적으로 사용한 상태에서 고장이 난 경우에는 보증 규정에 의해 무료로 A/S해드리며, 보증 규정의 유상 서비스에 해당하는 경우에는 유료로 A/S 해드립니다. A/S를 원하실 경우 보증서와 보증 규정 내용을 확인한 후 고객서비스센터로 연락하여 주십시오.
        \n\n<b>[보증규정]</b> 보증 대상물은 제품본체와 무선충전 살균 크래들입니다.
        \n\n<b>[무상 서비스]</b> 구입 후 1년[보증기간]이내에 정상적인 사용 상태에서 발생한 고장의 경우 무상서비스를 받을 수 있습니다.\n이 제품을 영업 용도로 전환하여 사용할 경우에는 무상 서비스에 해당되지 않습니다.
        \n\n<b>[유상 서비스]</b> 보증기간 중이라도 다음의 경우는 유상 서비스가 됩니다.
        \n\n1. 소비자의 취급 부주의(구입 후 낙하,침수,파손,손상)로 고장이 발생한 경우\n2. 소모품(헤드)의 교환, 사용 중에 일어난 외관상의 변화(긁힘,변형,변색 등)의 경우\n3. 소비자가 임의로 분해, 개조한 경우\n4. 본 상품에서 제공한 소모품 외의 부품을 사용하거나, ‘주의사항’을 지키지 않아 고장난 경우\n5. 소모품(건전지.브러시 등)의 수명이 다하거나 분실한 경우\n6. 본 보증서를 제시하지 않거나, 본 보증서에 구입날짜 기재가 없는 경우 또는 내용을 임의로 변경한 경우</string>
    <string name="zum">· </string>
    <string name="faq1">사용하기 전 사용설명서를 반드시 읽어보시고, 정확한 사용방법을 숙지하신 후 사용하여 주십시오.</string>
    <string name="faq2">피부에 부상이나 상처가 있는 경우에는 절대 사용하지 마십시오. (피부 트러블, 통증을 느낄 우려)</string>
    <string name="faq3">고장, 손상 상태인 채로 사용하지 마십시오. (피부 트러블, 통증을 느낄 우려)</string>
    <string name="faq4">자극, 어지러움, 전기 충격이나 열감을 느낄 시 즉시 사용을 중지하십시오.</string>
    <string name="faq5">사용 중 피부나 신체에 이상을 느끼는 경우 즉시 사용을 중지해 주십시오. (전문의와 상담 후 지시를 따라 주십시오)</string>
    <string name="faq6">가급적 건조, 서늘한 곳에 보관하여 주시고 직사광선은 피해주십시오.</string>
    <string name="faq7">제품을 장시간 사용할 경우 피부를 민감하게 만들 수 있습니다.</string>
    <string name="faq8">어린이의 손이 닿지 않는 곳에 보관하여 주십시오.</string>
    <string name="faq9">타사의 소모품은 사용하지 마십시오.</string>
    <string name="faq10">무선충전 크래들 위에 제품 외에는 올려 놓지 마십시오.(주의: 동전 및 금속물 등)</string>
    <string name="faq11">배터리 방전후 충전완료까지 3시간 이상 소요되며, 제품 놓는 위치에 따라 충전시간이 늘어날 수 있습니다.</string>
    <string name="faq12">소비자의 과실로 고장이 난 경우 교환이나 환불이 불가합니다.</string>
    <string name="faq13">구매 후 1년(보증기간) 내에 무상서비스를 받으실 수 있습니다.</string>
    <string name="faq14">소비자 과실</string>
    <string name="faq15">사용자의 잘못 또는 취급 부주의로 인한 고장(낙하, 침수, 충격, 파손, 무리한 동작 등)</string>
    <string name="faq16">당사의 서비스 기사 및 지정협력사 기사가 아닌 다른 사람이 수리하여 고장이 발생한 경우</string>
    <string name="faq17">소비자의 고의 또는 과실로 인한 고장인 경우</string>
    <string name="faq18">정품 이외의 부품이나 부속물 사용에 의한 고장이나 제품 파손의 경우</string>
    <string name="as">본 제품이 이상이 있을 경우 공정거래위원회 고시에 의거 보상해 드립니다.
        \n본 보증서와 보증 규정 내용을 확인한 후 고객서비스 센터로 연락하여 주십시오.
        \n고객서비스 센터 : 055-290-5888
    </string>
    <string name="cia_id">AU_</string>
    <string name="scanner_action_scan">찾기</string>
    <string name="scanner_action_cancel">중지</string>
    <string name="scanner_subtitle_bonded">등록된 디바이스</string>
    <string name="scanner_subtitle_not_bonded">연결 가능한 디바이스</string>
    <string name="action_connect">연결하기</string>
    <string name="action_select">디바이스 선택</string>
    <string name="action_add_device">디바이스 추가</string>
    <string name="action_connecting">연결중......</string>
    <string name="action_disconnect">DISCONNECT</string>
    <string name="action_disconnecting">DISCONNECTING…</string>
    <string name="not_available">n/a</string>
    <string name="scanner_empty">찾을 수 있는 디바이스가 없습니다.</string>
    <string name="scanner_title">AU 디바이스를 연결해주세요.</string>
    <string name="no_required_permission">Permission denied.</string>
    <string name="head_img">head img</string>
    <string name="back_btn">뒤로가기</string>
    <string name="step_1">STEP 1</string>
    <string name="step_2">STEP 2</string>
    <string name="step_3">STEP 3</string>
    <string name="step_4">STEP 4</string>
    <string name="manual_step1">용도에 맞는 헤드를 장착해줍니다.</string>
    <string name="manual_step2">옆면에 위치한 전원 버튼을 켜서 작동시킵니다.</string>
    <string name="manual_step3">본 제품은 무선 충전 제품으로 구성품에 포함된 USB 케이블로 충전이 가능하며 크레들의 중심과 본체의 중심이 일치하도록 올려 충전합니다.</string>
    <string name="manual_step4">충전시 전원버튼이 점멸표시되며 완충시 전원버튼이 점등됩니다.</string>
    <string name="head1_title">1.헤드 교체 및 교체하기</string>
    <string name="head2_title">2.헤드 살균</string>
</resources>