<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="com.example.ciabluetooth.activity.CiaInfoActivity" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".activity.CiaInfoActivity">

            <View
                android:id="@+id/toolbar_middle"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="@id/device_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/device_img"
                app:layout_constraintVertical_bias="0.83" />

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6.5dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/back_btn"
                android:onClick="@{view::onClick}"
                android:padding="20dp"
                android:src="@drawable/ic_btn_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_info"
                android:textColor="@color/text_title"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/back_btn"
                app:layout_constraintStart_toEndOf="@+id/back_btn"
                app:layout_constraintTop_toTopOf="@+id/back_btn" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingTop="90dp"
                android:background="@color/background_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_middle" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:background="@drawable/circle_back_short"
                app:tabIndicatorHeight="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_middle" />

            <ImageView
                android:id="@+id/device_img"
                android:layout_width="180dp"
                android:layout_height="190dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/img_splash_device_left"
                android:contentDescription="@string/head_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>